tests/baselines/reference/parserForOfStatement8.errors.txt
tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement8.ts(1,15): error TS2304: Cannot find name 'X'.


==== tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement8.ts (1 errors) ====
    for (var v of X) {
                  ~
!!! error TS2304: Cannot find name 'X'.
    }